# EMProj_QML

./: .gitignore  CMakeLists.txt  main.cpp  question_data.xlsx  resources.qrc
src/cpp/: database.cpp  managementbackend.cpp  templateelement.cpp
src/headers/: database.hpp  managementbackend.hpp  podium.hpp  questiondata.hpp  templateelement.hpp
src/ui/: Game.qml  Intro.qml  MuteSwitch.qml  Outro.qml  OutroQuestionWidget.qml  QuestionWidget.qml  main.qml
